# onelap-strava-sync

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  pyproject.toml  run_sync.py
docs/: skills-mapping.md
docs/plans/: 2026-03-10-onelap-to-strava-implementation.md  2026-03-11-strava-auth-init-automation.md  2026-03-11-strava-upload-error-visibility.md  2026-03-12-onelap-multi-fit-dedup-implementation.md  2026-03-12-skills-restructure-implementation.md  2026-03-15-sync-onelap-strava-agent-skills-design.md  2026-03-15-sync-onelap-strava-agent-skills.md
docs/reference/: onelap-adapter-notes.md
docs/superpowers/specs/: 2026-03-23-expo-gui-design.md
skills/onelap-strava-sync/: SKILL.md
skills/onelap-strava-sync/resources/: commands.md
src/sync_onelap_strava/: cli.py  config.py  onelap_client.py  strava_client.py  sync_engine.py
tests/: test_cli.py  test_cli_download_only.py  test_cli_errors.py  test_config.py  test_e2e_dry_run.py  test_logging_output.py  test_onelap_client.py  test_onelap_download.py  test_onelap_http_login.py  test_retry_and_failures.py  test_skill_repository_structure.py  test_state_store.py  test_strava_oauth.py  test_sync_engine.py  test_sync_http_integration.py
