[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-onelap-strava"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
onelap-sync = "sync_onelap_strava.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
